version 0.60.4
12/06/2018
    - implemented OAuth2 authorization code request with OpenID Authentication (margaretha)
    - enabled OAuth2 authorization without OpenID authentication using Nimbus library (margaretha)
    - implemented response handler for OpenID authentication errors in authorization requests (margaretha)
    - added tests regarding OpenID authentication in authorization requests (margaretha)
    
version 0.60.3
06/06/2018
    - improved user authentication by using authentication filter for authorization code request (margaretha)
    - limited client authentication to client id checking in authorization code request (margaretha)
    - added user_id in the oauth2_access_token database table (margaretha)
    - implemented OAuth2Authentication provider for token context management (margaretha)
    - added parameter checking for authorization DAO (margaretha)
    - added controller tests using OAuth2 access token (margaretha)
    - added database tables for MySQL (margaretha)
    - updated JWT library and related codes (margaretha)    
    
version 0.60.2
03/05/2018
    - implemented OAuth2 client registration (margaretha)
    - implemented OAuth2 client authentication (margaretha)
    - changed virtual corpus search to retrieval (margaretha)
    - implemented public client deregistration task (margaretha)
    - added client registration and deregistration tests (margaretha)
    - implemented confidential client deregistration task (margaretha)
    - fixed storing client secret (margaretha)
    - implemented OAuth2 response handler (margaretha)
    - implemented OAuth2 request access token with client credentials grant (margaretha)
    - implemented OAuth2 request access token with resource owner password grant (margaretha)
    - implemented OAuth2 authorization code request (margaretha)
    - added OAuth2 error codes (margaretha)
    - added OAuth2 authorization, scope and access token tables for SQLite (margaretha)