@@ -1,9 +1,10 @@
 version 0.60.4
-12/06/2018
+18/06/2018
     - implemented OAuth2 authorization code request with OpenID Authentication (margaretha)
     - enabled OAuth2 authorization without OpenID authentication using Nimbus library (margaretha)
     - implemented response handler for OpenID authentication errors in authorization requests (margaretha)
     - added tests regarding OpenID authentication in authorization requests (margaretha)
+    - implemented OAuth2 authorization error response via redirect URI instead of JSON (margaretha)
     
 version 0.60.3
 06/06/2018
